--- a/Kontaktside.html
+++ b/Kontaktside.html
@@ -1,20 +1,16 @@
 <html>
 <head>
-<title> Vasehus' side </title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Kontraktside.css">
 </head>
-
-
-<body>
 <header>
-<img src="LeducGolf-85.jpg">
+
 <nav>
 <ul>
 <li> 
 <a href="index.html">Forside</a>
  </li> 
 <li> 
-<a href="Kontaktside.html">Kontakt </a>
+<a> Kontakt </a>
  </li>
  <li> 
  <a> Galleri </a>
@@ -28,8 +24,9 @@
 </ul>
 </nav>
 </header>
-<h1> Hej og velkommen til min webside </h1>
 
-</body>
-</html>
+<h1> 
+Telefon: 22 47 23 35
+</h1>
+</hmtl>
 
